--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "nodemon --exec babel-node ./src/index.js",
-    "build": "rm -rf dist && babel --minified --no-comments src --out-dir dist --copy-files",
+    "build": "babel --minified --no-comments src --out-dir dist --copy-files",
+    "test": "jest",
     "pretty": "prettier --write \"**/*.+(js|jsx|ts|tsx|json|yml|yaml|css|md)\""
   },
   "repository": {
@@ -29,6 +30,7 @@
     "@babel/core": "^7.12.13",
     "@babel/node": "^7.12.13",
     "@babel/preset-env": "^7.12.13",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "prettier": "^2.0.5"
   }
