--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dpacl",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "División Político Administrativa de Chile",
   "main": "dist/index.js",
   "scripts": {
@@ -34,5 +34,7 @@
     "nodemon": "^2.0.7",
     "prettier": "^2.0.5"
   },
-  "files": ["dist"]
+  "files": [
+    "dist"
+  ]
 }
